--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-web-apis/common": "^3.0.2",
+    "@ng-web-apis/midi": "^3.0.2",
     "bootstrap": "^5.3.1",
     "rxjs": "~7.8.0",
     "tone": "^14.7.77",
