--- a/angular.json
+++ b/angular.json
@@ -87,10 +87,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "tonejs-synthesizer:build:production"
+              "buildTarget": "tonejs-synthesizer:build:production"
             },
             "development": {
-              "browserTarget": "tonejs-synthesizer:build:development"
+              "buildTarget": "tonejs-synthesizer:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -98,7 +98,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tonejs-synthesizer:build"
+            "buildTarget": "tonejs-synthesizer:build"
           }
         },
         "test": {
